# bkv

./: .gitignore  CMakeLists.txt  README-cn.md  README.md  bkv.c  bkv.h  bkv_example.c  bkv_test.c  bkv_test_plus.cpp  sync.sh  test.sh
c/: .gitignore  bkv.c  bkv.h  bkv_plus.c  bkv_plus.h  bkv_test.c  test.sh  test_crc.c  test_crc.sh  test_example.sh
c/test_crc.dSYM/Contents/: Info.plist
c/test_crc.dSYM/Contents/Resources/DWARF/: test_crc
go/: README.md  binary.go  bkv.go  bkv_test.go  util.go  util_test.go  value.go
java/: build.gradle  release.sh  settings.gradle
java-netty-example/: .gitignore  README.md  build.gradle  settings.gradle
java-netty-example/src/main/java/com/dix/fengine/netty/: Application.java  Main.java
java-netty-example/src/main/java/com/dix/fengine/netty/app/: NettyServerApp.java
java-netty-example/src/main/resources/: log4j.properties
java-netty-example/src/test/java/com/dix/client/: DemoClientInboundHandler.java  DemoClientOutboundHandler.java  NettyClient.java
java-netty-example/src/test/java/com/dix/test/: ClientTest.java
java-netty-example/src/test/resources/: log4j.properties
java/src/main/java/com/dix/codec/bkv/: BKV.java  CodecUtil.java  DecodeLengthResult.java  Extension.kt  KV.java  Parse.java  UnpackBKVResult.java  UnpackKVResult.java
java/src/main/java/com/dix/codec/bkv/app/: CoreParser.kt
java/src/test/java/com/dix/codec/bkv/: BKVTest.java  BenchTest.java  KVTest.java  ParseTest.java  UtilTest.java
js/: .gitignore  README.md  bkv.js  bkv_test.js  frame.js  frame_test.js
python/: bkv.py  test_bkv.py
(+37 files in other folders)
